crates/naos-core/tests/fixtures/conformance/rejected/unknown-component-options.wc.tsx
export const options = { shadow: false, styles: [":host { display: block; }"] }

export function UnknownComponentOptions() {
  return <span>Options</span>
}
